--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   encoding: utf8
   pool: 2
   reconnect: true
-  database: lab
+  database: bigbang
   host: localhost
   username: root
   password:
